// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getChangedEntry cross exports 1`] = `
Array [
  Object {
    "name": "b",
    "source": "sampleFile.js",
  },
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntry import should not be counted as entry 1`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntry single line 1`] = `
Array [
  Object {
    "name": "b",
    "source": "sampleFile.js",
  },
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntry single line 2`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntry single line 3`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntry within 1 export 1`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
  Object {
    "name": "default",
    "source": "sampleFile.js",
  },
]
`;
